--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -29,5 +29,29 @@
         ]
       }
     }
+  },
+  "api": {
+    "adminEdmundoWallis": {
+      "service": "AppSync",
+      "providerPlugin": "awscloudformation",
+      "dependsOn": [],
+      "output": {
+        "authConfig": {
+          "defaultAuthentication": {
+            "authenticationType": "API_KEY",
+            "apiKeyConfig": {
+              "apiKeyExpirationDays": 365,
+              "apiKeyExpirationDate": "2023-12-19T04:12:06.174Z",
+              "description": "cantidadAPI"
+            }
+          },
+          "additionalAuthenticationProviders": [
+            {
+              "authenticationType": "AWS_IAM"
+            }
+          ]
+        }
+      }
+    }
   }
 }
